<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/skyblue"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvNamecity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/tvNameCity"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView

        android:id="@+id/tvDescriptin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvNamecity"
        android:gravity="center"
        android:hint="@string/tvWeather"
        android:padding="10dp"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/tvTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvDescriptin"
        android:gravity="center"
        android:text="@string/tvTemp"
        android:textSize="100dp" />

    <LinearLayout
        android:id="@+id/LinearTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@id/tvTemp"
        android:orientation="horizontal">



        <TextView
            android:id="@+id/tvTempMin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/tvMIN"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/tvTempMax"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/tvMax"
            android:textSize="30dp" />


    </LinearLayout>
    <LinearLayout
        android:layout_below="@id/LinearTemp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvHumidity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/tvHumidity"
            android:textSize="30dp" />
                <TextView
            android:id="@+id/tvPressure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/tvPressure"
            android:textSize="30dp" />


    </LinearLayout>

</RelativeLayout>